Change path to movies and reviews
