# routes/reviews.js
@@ -3,10 +3,9 @@ const express = require('express');
 const router  = express.Router();
 const reviewsController = require('../controllers/reviewsController');
 
-// Define endpoints
-router.get('/', reviewsController.getAllReviews);
+router.get('/',    reviewsController.getAllReviews);
 router.get('/:id', reviewsController.getReviewById);
-router.post('/', reviewsController.createReview);
+router.post('/',   reviewsController.createReview);
 router.put('/:id', reviewsController.updateReview);
 router.delete('/:id', reviewsController.deleteReview);
 
